# Youtube_Analyzer

./: .gitignore  README.md  process_crawl_data.py  pyproject.toml  requirements.txt  start-spark-only.ps1  start-streamlit-only.ps1  start-with-spark.ps1  start.ps1
.streamlit/: config.toml
Docs/: Milestone4_GUI_Design_Plan.md  MongoDB_schema.md  ProjectDescription.md  Report.md  ms4.md
Spark/: Degree_distribution_Categorized_Statistics.py  algorithms.ipynb
app/: Home.py  main.py
app/analytics/: __init__.py  category_stats.py  degree_stats.py  pattern_search.py  range_queries.py  topk_queries.py
app/components/: __init__.py  algorithm_performance.py  connection_status.py  dataset_overview.py  graph_visualization.py  instructions.py  network_metrics.py  quick_actions.py  video_link.py  visual_analytics.py
app/config/: __init__.py  config_loader.py
app/pages/: 1_Network_Statistics.py  1_📊_Network_Statistics.py  2_Top_K_Queries.py  2_🔍_Top_K_Queries.py  3_Range_Queries.py  3_🎯_Range_Queries.py  4_Graph_Analytics.py  4_🔗_Graph_Analytics.py  4_🔗_Pattern_Search.py  5_Pattern_Search.py
app/utils/: __init__.py  mongo_connector.py  spark_connector copy.py  spark_connector.py  youtube_helpers.py
scripts/: spark-basic.py  start-master.bat  start-spark-cluster.ps1  start-worker.bat
